crates/keron-lang/tests/corpus/errors/check/concat_resource_with_int.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `++` requires matching `List<T>` operands, found `List<Symlink>` and `List<Int>`
  --> 4:11
  |
4 | val all = syms ++ ns
  |           ^^^^^^^^^^
